<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mypetText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/hello_blank_fragment"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/editSignEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rec_edit"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
             />

            <EditText
                android:id="@+id/editSignUpPet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rec_edit"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/pet_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                 />

            <EditText
                android:id="@+id/editSignBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:background="@drawable/rec_bio"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/bio"
                android:inputType="textPersonName"
                android:padding="10dp"
                 />

            <EditText
                android:id="@+id/editSignPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/rec_edit"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editSignName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:background="@drawable/rec_edit"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                 />

            <Button
                android:id="@+id/buttonSignSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:background="@drawable/rec_button"
                android:text="@string/sign_button_text"
                android:textAllCaps="false" />
        </LinearLayout>

    </ScrollView>

</layout>

